--- a/Fundamentos de Programação para Internet/index.html
+++ b/Fundamentos de Programação para Internet/index.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 
+<!--Faculdade QI (Polo Rio Grande)
+Aluno: Rafael da Silva Santos
+RA: 05202198155
+Polo: Rio Grande - RS
+Curso: Sistemas para Internet
+Cadeira: Fundamentos de Programação para Internet
+
+ATIVIDADE INTEGRADORA UNIDADE 6-->
+
+
 <html>
 
 <head>
